css/styles.css
/*
css for igme230 personal page, styling done by celeste unless noted otherwise
*/

/*universal selector to get rid of built-in spacing*/
* {
    padding: 0%;
    margin: 0%;
    border: none;
}

body {
    background-color: white;
    font-family: Arial, Helvetica, sans-serif;
}

/*css for sidebar stuff goes below here*/
.sidebar {
    width: 20%;
    height: 100%;
    position: fixed;
    background-color: black;
    color: whitesmoke;
    padding-top: 5%;
    min-width: 18%;
    
}

/*round the image into a circle, give it a solid white border*/
.sidebar img {
    max-width: 50%;
    border-radius: 100px;
    border: 3px solid white;
    margin-left: 25%;
    
}

.sidebar h2, h3, p {
    padding: 5%;
    text-align: center;
}

a {
    color: #336dcc;
}

/*css for main div goes below here*/

.main {
    width: 75%;
    height: 100%;
    float: right;
    background-color: whitesmoke;
    padding-top: 5%;
    padding-left: 5%;
    padding-bottom: 50%;
    font-size: 1.2em;
}

.main li {
    list-style-type: none;
    padding-left: 3%;
    padding-top: 1em;
}

.title {
    color:#1a3868;
    font-size: 2em;
    text-decoration: underline;
}

